# Eksperimen_SML_Levi

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: preprocess-data.yml
preprocessing/: Eksperimen_Levi.ipynb  automate_Levi.py  preprocess.py
